# AdventOfCode2024

./: .gitignore  pyproject.toml
source/: d1-LocationListsDistance.py  d2-RedNosedReports.py  d3-MullItOver.py  d4-CeresSearch.py  d5-PrinterQueue.py  d6-GuardGallivant.py  utils.py
